prod/sqldb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sqldb
  name: sqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sqldb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: sqldb
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: eoloplants
        - name: MYSQL_ROOT_PASSWORD
          value: root
        image: mysql:8.0.23
        imagePullPolicy: ""
        name: sqldb
        volumeMounts:
          - mountPath: /db/mysql
            name: sqldb
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: sqldb
          persistentVolumeClaim:
            claimName: sql-pvc-sc
status: {}
