prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eoloplants-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            backend:
              serviceName: server
              servicePort: 8080
          - path: /toposervice/(.*)
            backend:
              serviceName: topo
              servicePort: 8080
